--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,13 @@ set (space_VERSION_MINOR 1)
 #set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 set(CMAKE_BUILD_TYPE debug)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -Wno-reorder")
 
 # The following folder will be included
 #include_directories("${PROJECT_SOURCE_DIR}")
+
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
 
 
 file(
@@ -22,6 +25,7 @@ GLOB_RECURSE
 source_files
 Main.cpp
 Astre.cpp
+System.cpp
 )
 
 add_executable(space   ${source_files})
